--- a/content/post/2017-12-12-scatter-plots.Rmd
+++ b/content/post/2017-12-12-scatter-plots.Rmd
@@ -10,7 +10,7 @@ tags:
   - sql
 ---
 
-Welcome to my first lesson on Data Science! Today, we will be disussing Scatter Plots. We are going to be extracting data from a database of baseball statistics in order to demostarte how to make a Scatter Plot. Remember, you must always begin by installing the necessary packages into RStudio and subsequently bringing them in with Library(). This includes Lahman, sqldf and ggplot2. 
+Welcome back to my Data Science blog! Today, we will be disussing Scatter Plots. We are going to be extracting data from a database of baseball statistics in order to demostarte how to make a Scatter Plot. Remember, you must always begin by installing the necessary packages into RStudio and subsequently bringing them in with Library(). This includes Lahman, sqldf and ggplot2. 
 
 ```{r warning= FALSE, message= FALSE}
 library(Lahman)
