--- a/public/post/2017-12-12-time-series.Rmd
+++ b/public/post/2017-12-12-time-series.Rmd
@@ -10,7 +10,7 @@ tags:
   - sql
 ---
 
-Welcome back to my Data Science blog! Today we are going to be learning about how to make a Time Series! Just like with Scatter Plots, we need to download all of our packages and bring them in through library.
+Welcome to my first lesson on Data Science! Today we are going to be learning about how to make a Time Series! Just like with Scatter Plots, we need to download all of our packages and bring them in through library.
 
 ```{r warning= FALSE, message= FALSE}
 library(Lahman)
